<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamOwl-Project2</string>
    <!--<string name="start_game">Start Game</string>-->
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <!--<string name="player_1_name">Player 1 Name:</string>
    <string name="player_2_name">Player 2 Name:</string>-->
    <string name="game_title">The Flocking Game</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="bird_placement_info">Place your bird %s</string>
    <string name="parrot_accessibility">Parrot</string>
    <string name="title_activity_final_score">Final Score</string>
    <string name="player_wins">%s Wins!</string>
    <!--<string name="birds_placed">%d total birds placed!</string>-->
    <string name="birds_placed">total birds placed!</string>
    <string name="new_game">New Game</string>
    <string name="place_bird">Place Bird</string>
    <string name="player_select">Select Your Bird!</string>
    <string name="game_state">game_state</string>
    <string name="seagull_accessibility">Seagull</string>
    <!--<string name="view_instructions">Instructions</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_text">To play, both players enter their names and then click the Start Game button.\n\nThe game then begins a round. A round consists of each player consecutively selecting a bird they want to place. To select a bird, tap on the bird and it will be outlined. To confirm the selection press the Confirm Selection button and then pass the device to the other player.\n\nBoth players then consecutively try to place their birds without touching the other birds on the play area. To place a bird, drag on the screen to position the bird and then press the Place Bird button to finalize the position.\n\nA new round then begins, but the order the players go in reverses. The game continues until one of the players overlap a bird with their placement. The player to overlap another bird first loses the game.</string>-->
    <string name="Username">Username:</string>
    <string name="Password">Password:</string>
    <string name="remember_me">Remember</string>
    <string name="login_button">Login</string>
    <string name="create_new_user">Create New User</string>
    <string name="create_new_user_string">Create New User</string>
    <string name="enter_username">Enter Username:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="re_enter_password">Re-Enter Password:</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <!--<string name="hello_world">Hello world!</string>-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="waiting_text">Looking for game</string>
    <string name="waiting_for_player">Game created, waiting for player</string>
    <string name="exit">Exit Game</string>
    <string name="selection_waiting_title">Waiting for opponent to play!</string>
</resources>
