<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Username"
        android:id="@+id/textUsername"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Password"
        android:id="@+id/textPassword"
        android:layout_alignTop="@+id/textUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editUsername"
        android:layout_alignBottom="@+id/textUsername"
        android:layout_toRightOf="@+id/textUsername"
        android:layout_toEndOf="@+id/textUsername"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPassword"
        android:layout_alignBottom="@+id/textPassword"
        android:layout_toRightOf="@+id/textUsername"
        android:layout_toEndOf="@+id/textUsername"
        android:inputType="text|textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_title"
        android:id="@+id/textWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeView"
        android:src="@drawable/parrot"
        android:layout_below="@+id/textWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/parrot_accessibility" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:id="@+id/checkRemember"
        android:layout_below="@+id/textPassword"
        android:layout_alignRight="@+id/welcomeView"
        android:layout_alignEnd="@+id/welcomeView"
        android:nestedScrollingEnabled="false"
        android:onClick="onCheckboxClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/buttonLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textWelcome"
        android:layout_alignStart="@+id/textWelcome"
        android:onClick="onLogin" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_user"
        android:id="@+id/buttonCreateNew"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonLogin"
        android:layout_toEndOf="@+id/buttonLogin"
        android:onClick="onCreateNewUser" />
</RelativeLayout>